Development Portal (2020-06-11 shi)
==============================
Testing region, org type and hierarchy filters
Update glossary for search2
Display if reporting-org is @secondary-reporter
Update css


Development Portal (2020-06-05 shi)
==============================
Updated recipient-country layout for document-links
Display all links in new tab for new SAVi
Update vocab geonames link for location-id
Add hover titles for location sub-elements
Display point/pos as separate @lat/@long
Add url to Google maps for point/pos


Development Portal (2020-06-01 shi)
==============================
Display V1 banner for new SAVi
Remove max-width for length to compensate for many transactions


Development Portal (2020-05-23 shi)
==============================
Fix Dash css


Development Portal (2020-05-15 shi)
==============================
Clean up landing page
Update glossary for COVID-19 trending button
Update footer with dquery link
Update all translations


Development Portal (2020-05-12 shi)
==============================
Fix generator css chunk name


Development Portal (2020-05-06 shi)
==============================
Display recipient-country in org file document-link


Development Portal (2020-05-04 shi)
==============================
Min-width for missing dates table
Fix font for dash table column
Fix word-break for org file budget line


Development Portal (2020-04-30 shi)
==============================
Update COVID-19 search text info to include tag
Fix capital-spend percentage
Add transaction description field for COVID-19 search
Display multiple narratives in title, description,
participating-org, humanitarian-scope, tag-99,
condition, policy-marker-99


Development Portal (2020-04-26 shi)
==============================
Fix activity table margin


Development Portal (2020-04-25 shi)
==============================
Update font-size for currency in org files
Add fold for collapse of extra information in transaction tables
Adjust layout for transaction @ref

