@@ -4,6 +4,7 @@ Testing region, org type and hierarchy filters
 Update glossary for search2
 Display if reporting-org is @secondary-reporter
 Update css
+Update hierarchy filter
 
 
 Development Portal (2020-06-05 shi)
